--- a/NodejsLogger/demo2/package.json
+++ b/NodejsLogger/demo2/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "SET NODE_ENV=production & nodemon index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "SET NODE_ENV=test & jest"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "winston": "^3.3.3"
   }
 }
