--- a/RedisCacheNodejs/implementing-caching-in-nodejs/final/package.json
+++ b/RedisCacheNodejs/implementing-caching-in-nodejs/final/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "redisdemo2",
+  "name": "code",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "redis": "^3.1.2"
+    "nodemon": "^2.0.7",
+    "redis": "^3.0.2"
   }
 }
